# StackTrace

./: .clang-format  .cmake-format  .gitignore  .hgignore  CMakeLists.txt  ErrorHandlers.h  License.txt  Makefile  Readme.txt  StackTrace.cpp  StackTrace.h  StackTraceMacros.h  StackTraceThreads.cpp  StaticVector.h  TestStack.cpp  TestTerminate.cpp  TestUtilities.cpp  Utilities.cpp  Utilities.h  Utilities.hpp  ValgrindSuppresionFile  cppcheckSuppressionFile  source_location.c17  source_location.c20  source_location.h
.github/workflows/: ci.yml
cmake/: FindCoverage.cmake  FindCppcheck.cmake  FindCppclean.cmake  FindStackTrace.template.cmake  FindTimer.cmake  FindValgrind.cmake  StackTrace.cmake.in  UseDoxygen.cmake  WriteRepoVersion.cmake  ctest_script.cmake  libraries.cmake  macros.cmake  run.cppclean.template.cmake
data/: ExampleStack.txt
doxygen/: Doxyfile.in
doxygen/html/: footer.html  header.html
spack-repo/: repo.yaml
src/: .clang-format  CMakeLists.txt  ErrorHandlers.h  StackTrace.cpp  StackTrace.h  StackTraceThreads.cpp  StaticVector.h  TestStack.cpp  TestTerminate.cpp  TestUtilities.cpp  UnitTest.cpp  UnitTest.h  Utilities.cpp  Utilities.h  Utilities.hpp  UtilityMacros.h  ValgrindSuppresionFile  cppcheckSuppressionFile  source_location.h  string_view.h
src/cmake/: FindCppcheck.cmake  FindCppclean.cmake  FindStackTrace.template.cmake  cppcheckSuppressionFile  ctest_script.cmake  macros.cmake  run.cppclean.template.cmake
src/doxygen/: DoxygenMainpage.h
